--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -28,7 +28,14 @@
 							<div class="profile-sidebar">
 								<!-- SIDEBAR USERPIC -->
 								<div class="profile-userpic">
-									<img src="" class="img-responsive" alt="">
+									{% if a.gender == 'M' %}
+									<img src="{% static 'images/male.png' %}" class="img-responsive" alt="">
+									{% elif a.gender == 'F'%}
+									<img src="{% static 'images/female.jpg' %}" class="img-responsive" alt="">
+									{% else %}
+									<img src="{% static 'images/male.png' %}" class="img-responsive" alt="">
+									{% endif %}
+
 								</div>
 								<!-- END SIDEBAR USERPIC -->
 								<!-- SIDEBAR USER TITLE -->
