--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,15 +1,9 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html> 
 	<head>
 		{% load static %}
 		{% load widget_tweaks %}
-		<title>Flat-Mate Website Template | Home :: w3layouts</title>
+		<title>Register</title>
 		<link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
 		<link href="{% static 'css/theme-style.css' %}" rel='stylesheet' type='text/css' />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,14 +30,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="col-md-6">
 							<!--start-logo-->
 							<div class="well logo">
-								<a href="#"><img src="{% static 'images/logo.png' %}" title="Flatmate" /></a>
+								<h1><img src="/static/images/slider-img.png" width="10%">&nbsp<a href="#" style="color: white;text-decoration: none">Sahayak</a></h1>
 							</div>
 							<!--//End-logo-->
 						</div>
 						<div class="well col-md-6">
 							<!--start-header-right-->
 							<div class="login-info well header-right">
-								<p><a class="login btn-primary" href="#">Login</a></p>
+								<p><a class="login btn-primary" href="/login">Login</a></p>
 							</div>
 							<!--//End-header-right-->
 						</div>
