--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -3,7 +3,7 @@
 <html> 
 	<head>
 		{% load static %}
-		<title>Testing</title>
+		<title>Sahayak Chat</title>
 		<link href="/static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="/static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 		<link href="/static/css/theme-style.css" rel='stylesheet' type='text/css' />
@@ -31,7 +31,7 @@
 						<div class="col-md-6">
 							<!----start-logo---->
 							<div class="well logo">
-								<a href="#"><img src='{% static "images/logo.png" %}' title="Flatmate" /></a>
+								<h1><a href="#" style="color: white;text-decoration: none">Sahayak</a></h1>
 							</div>
 							<!----//End-logo---->
 						</div>
@@ -53,7 +53,7 @@
 							<p>Now information is one click away.<br> 
 							Get the complete benefits of the schemes announced specially for you.<br> 
 							Register with us NOW.</p>
-							<p><a class="btn btn-primary btn-lg b-btn" href="#"> Guide Me</a></p>
+							<p><a class="btn btn-primary btn-lg b-btn" href="/chat.html"> Guide Me</a></p>
 						</div>
 						<div class="well slide-banner-right col-md-4">
 							<img src="/static/images/slider-img.png" class="img-responsive" alt="" /> 
@@ -87,32 +87,10 @@
 				<!----start-mid-grids--->
 				<div class="mid-grids">
 					<div class="container">
-							<h3> The Modern Era of Web Designing </h3>
-							<p>We make wireframe ultra fast,leak proof</p>
+							<h3> Help Your community by Making them Aware. </h3>
+							<p>Become the engine of your Societies progress.</p>
 							<!-- Carousel -->
-					    	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-								<!-- Wrapper for slides -->
-								<div class="carousel-inner">
-								    <div class="item active">
-								    	<img src="/static/images/slide2.png" alt="First slide">
-								    </div>
-								    <div class="item">
-								    	<img src="/static/images/slide2.png" alt="Second slide">
-								    </div>
-								    <div class="item">
-								    	<img src="/static/images/slide2.png" alt="three slide">
-								    </div>
-								</div>
-								<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-							    	<span class="glyphicon glyphicon-chevron-left"></span>
-								</a>
-								<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-							    	<span class="glyphicon glyphicon-chevron-right"></span>
-								</a>
-							</div><!-- /carousel -->
-					</div>
-				</div>
+					    	<!-- /carousel -->
 				<!----start-mid-grids--->
 				<!---- start-add-light-box-script---->
 				<!-- Add fancyBox light-box -->
@@ -189,71 +167,7 @@
 										</div>
 						  			</div>
 								</div>
-								<!-----pop-up-grid---->
-				<!-- //End fancyBox light-box -->
-				<!---- //End-add-light-box-script---->
-				<!----start-price-tables----->
-				<div class="pricetables">
-					<div class="container">
-						<div class="pricetables-head">
-							<h2>A wireframe is the primitive skeleton of your website.</h2>
-							<p>Pick a plan from below to get started! Already 20000+ websites and webprojects have been successfully wireframed with HotGloo.</p>
-						</div>
-						<div class="col-md-4 pricetable">
-							<h3>Free</h3>
-							<ul>
-								<li><a class="frist-fea" href="/static/#">$0/Month</a></li>
-								<li><a href="/static/#">1 Project</a></li>
-								<li><a href="/static/#">5 Members</a></li>
-								<li><a href="/static/#">5 GB</a></li>
-							</ul>
-							<a class="price-btn1 popup-with-zoom-anim" href="/static/#small-dialog">Sign Up</a>
-						</div>
-						<div class="col-md-4 pricetable pricetable1">
-							<h3>Professional</h3>
-							<span> </span>
-							<ul>
-								<li><a class="frist-fea" href="/static/#">$50/Month</a></li>
-								<li><a href="/static/#">20 Project</a></li>
-								<li><a href="/static/#">50 Members</a></li>
-								<li><a href="/static/#">100 GB</a></li>
-							</ul>
-							<a class="price-btn1 popup-with-zoom-anim" href="/static/#small-dialog">Sign Up</a>
-						</div>
-						<div class="col-md-4 pricetable pricetable2">
-							<h3>Enterprise</h3>
-							<ul>
-								<li><a class="frist-fea" href="/static/#">$90/Month</a></li>
-								<li><a href="/static/#">1 Project</a></li>
-								<li><a href="/static/#">5 Members</a></li>
-								<li><a href="/static/#">5 GB</a></li>
-							</ul>
-							<a class="price-btn1 popup-with-zoom-anim" href="/static/#small-dialog">Sign Up</a>
-						</div>
-					</div>
 				</div>
-				<!----//End-price-tables----->
-				<!---start-video----->
-				<div class="video">
-					<div class="container">
-						<h4>A wireframe is the primitive skeleton of your website.</h4>
-					</div>
-					<div class="video-bg">
-						<!----start-model-box---->
-						<a data-toggle="modal" data-target=".bs-example-modal-lg" href="#"> </a>
-						<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-						  <div class="modal-dialog modal-lg">
-						    <div class="modal-content light-box-info">
-						    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove"></span></button>
-						     <h3>Place Yours content here</h3>
-						     <iframe src="//player.vimeo.com/video/37191080" webkitallowfullscreen mozallowfullscreen allowfullscreen> </iframe>
-						    </div>
-						  </div>
-						</div>
-						<!----start-model-box---->
-					</div>
-				</div>
-				<!---//End-video----->
 				<!----start-contact---->
 				<div class="contact" id="write">
 					<div class="container">
